--- a/style.css
+++ b/style.css
@@ -31,17 +31,18 @@ h1.titleName {
 }
 
 .image-container {
-    margin: 0; 
+    width: 600px; 
+    height: 400px; 
     position: relative;
+    margin: auto; 
 }
 
 .image-container img {
-    max-width: 100%; 
-    max-height: 400px; 
-    width: auto; 
-    height: auto; 
-    border: 2px solid black;
-    display: block; 
+    width: 100%; 
+    height: 100%;
+    object-fit: cover; 
+    border: 5px solid #000; 
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.5); 
 }
 
 .modal {
